# Pruefung-OOP-05.02.2026-Aufgabe-1

./: README.md
HelloWorld_Addierer_CMake/: CMakeLists.txt
HelloWorld_Addierer_CMake/src/: add.cpp
HelloWorld_Addierer_Make/src/: Makefile  add.h.gch  main  main.cpp
